fix: missing index.d.ts in published package

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "files": [
     "hook.js",
     "hook.d.ts",
-    "server.js",
-    "server.d.ts"
+    "index.d.ts",
+    "server.js"
   ],
   "repository": {
     "type": "git",
