--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "remote",
     "fast-refresh"
   ],
+  "scripts": {
+    "lint": "eslint .",
+    "test": "jest"
+  },
   "peerDependencies": {
     "next": ">9.0.0",
     "react": ">16.0.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^12.1.2",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "all-contributors-cli": "^6.20.0",
@@ -34,6 +39,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.0.0",
+    "jest": "^27.4.5",
+    "jest-environment-jsdom": "^27.4.4",
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
