--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react": ">16.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "all-contributors-cli": "^6.20.0",
@@ -48,7 +50,6 @@
   },
   "dependencies": {
     "chokidar": "^3.5.2",
-    "express": "^4.17.1",
     "ws": "^8.2.3"
   }
 }
